--- a/Docker_testintegration/Dockerfile
+++ b/Docker_testintegration/Dockerfile
@@ -1,11 +1,11 @@
 FROM ubuntu:latest
 
-COPY requirements.txt requirements.txt
+COPY requirements requirements
 
 RUN apt-get update && apt-get -y upgrade
 RUN apt-get install -y build-essential python3 python3-pip python3-dev
 RUN pip3 -q install pip --upgrade
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r requirements
 
 WORKDIR /selberai
 
